# ArcseamsBackend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_shippingaddress_measurement_image.py  0003_orders.py  0004_design.py  0005_remove_orders_images_remove_orders_measurement_and_more.py
media/mysite/static/images/: REQUIREMENTS_9.0._Normalizing_company_Names.docx
mysite/: settings.py  urls.py
mysite/enums/: order.py
